--- a/result/html/index.html
+++ b/result/html/index.html
@@ -5,11 +5,11 @@
 <p><a href="crm.html">crm.html</a></p>
 <p><a href="customers.html">customers.html</a></p>
 <p><a href="discounts.html">discounts.html</a></p>
-<p><a href="expand.html">expand.html</a></p>
 <p><a href="medias.html">medias.html</a></p>
 <p><a href="notifications.html">notifications.html</a></p>
 <p><a href="oauth.html">oauth.html</a></p>
 <p><a href="orders.html">orders.html</a></p>
+<p><a href="other.html">other.html</a></p>
 <p><a href="payments.html">payments.html</a></p>
 <p><a href="pingxx.html">pingxx.html</a></p>
 <p><a href="pricing.html">pricing.html</a></p>
